@@ -130,7 +130,7 @@
 .if n .ad l
 .nh
 .SH "NAME"
-paxctl\-ng \- get or set the PaX flags for both PT_PAX and XT_PAX markings
+paxctl\-ng \- get or set the PaX flags for both PT_PAX and XATTR_PAX markings
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
 \&\fBpaxctl-ng\fR [\-PpEeMmRrXxSs] [\-v] \s-1ELF\s0
@@ -159,11 +159,11 @@ paxctl\-ng \- get or set the PaX flags for both PT_PAX and XT_PAX markings
 \&\fBpaxctl-ng\fR is used to get or set the PaX flags on \s-1ELF\s0 executables which determine
 the memory restrictions on process(es) spawned from them.  \fBpaxctl-ng\fR manages
 two types of markings, either the older style \s-1PT_PAX\s0 markings which put the flags
-in an \s-1ELF\s0 program header named \s-1PT_PAX\s0, or the newer style \s-1XT_PAX\s0 markings which
+in an \s-1ELF\s0 program header named \s-1PT_PAX\s0, or the newer style \s-1XATTR_PAX\s0 markings which
 put the flags in an extended attribute field called \*(L"user.pax\*(R" on the filesystem.
-Whenever possible, \fBpaxctl-ng\fR will set both \s-1PT_PAX\s0 and \s-1XT_PAX\s0 to the same flags.
+Whenever possible, \fBpaxctl-ng\fR will set both \s-1PT_PAX\s0 and \s-1XATTR_PAX\s0 to the same flags.
 .PP
-There are drawbacks to both \s-1PT_PAX\s0 and \s-1XT_PAX\s0 markings.  \s-1PT_PAX\s0 will not work on
+There are drawbacks to both \s-1PT_PAX\s0 and \s-1XATTR_PAX\s0 markings.  \s-1PT_PAX\s0 will not work on
 \&\s-1ELF\s0 binaries which do not already have a \s-1PT_PAX\s0 program header.  Unlike the original
 tool, \fBpaxctl\fR, which would try to add this header or convert a \s-1GNU_STACK\s0 header,
 \&\fBpaxctl-ng\fR does not edit the \s-1ELF\s0 in any way, beyond setting the PaX flags if and
@@ -171,7 +171,7 @@ only if the \s-1PT_PAX\s0 program header already exists.  Some \s-1ELF\s0 binari
 they are edited.  Since, \fBpaxctl-ng\fR will never to so, it is always safe to run
 it on such binaries.
 .PP
-Alternatively, \s-1XT_PAX\s0 requires a filesystem support Extended Attributes.  Most
+Alternatively, \s-1XATTR_PAX\s0 requires a filesystem support Extended Attributes.  Most
 modern filesystems do so, but not all.  Furthermore, one must be careful when
 moving \s-1ELF\s0 objects to ensure that the target filesystem or archive supports
 Extended Attributes, otherwise they are lost, unlike \s-1PT_PAX\s0 markings which
@@ -181,11 +181,11 @@ are carried within the binary itself.
 a \s-1PT_PAX\s0 program header and an Extended Attribute field \*(L"user.pax\*(R" exist, then
 both fields will be equally updated when the user modifies flags; unless the
 \&\fB\-L\fR or \fB\-l\fR flags are given, in which case the markings are limiting to just
-\&\s-1PT_PAX\s0 or \s-1XT_PAX\s0, respectively.  If only one marking is possible, then only that
+\&\s-1PT_PAX\s0 or \s-1XATTR_PAX\s0, respectively.  If only one marking is possible, then only that
 marking will be updated.  Under no circumstances will \fBpaxctl-ng\fR create a \s-1PT_PAX\s0
-program header as \fBpaxctl\fR does.  It will only attempt to create an \s-1XT_PAX\s0 Extended
+program header as \fBpaxctl\fR does.  It will only attempt to create an \s-1XATTR_PAX\s0 Extended
 Attribute field if it is instructed to do so with the \fB\-C\fR or \fB\-c\fR flags, and it
-will attempt to synchronize the \s-1PT_PAX\s0 and \s-1XT_PAX\s0 markings if given the \fB\-F\fR or
+will attempt to synchronize the \s-1PT_PAX\s0 and \s-1XATTR_PAX\s0 markings if given the \fB\-F\fR or
 \&\fB\-f\fR flags.  Finally, if the user wished, he can remvoe the Extended Attribute
 field \*(L"user.pax\*(R" by running \fBpaxctl-ng\fR with the \fB\-d\fR flag.
 .SH "OPTIONS"
@@ -212,20 +212,20 @@ eg. \-Pp for \s-1PAGEEXEC\s0, then the default setting \- is used.
 .PD 0
 .IP "\fB\-z\fR Set default setting (\-\-\-\-\-\-)" 4
 .IX Item "-z Set default setting (------)"
-.IP "\fB\-C\fR Create \s-1XT_PAX\s0 xattr with the most secure PaX settings" 4
-.IX Item "-C Create XT_PAX xattr with the most secure PaX settings"
+.IP "\fB\-C\fR Create \s-1XATTR_PAX\s0 xattr with the most secure PaX settings" 4
+.IX Item "-C Create XATTR_PAX xattr with the most secure PaX settings"
 .IP "\fB\-c\fR Create \s-1XP_PAX\s0 xattr with the default PaX settings" 4
 .IX Item "-c Create XP_PAX xattr with the default PaX settings"
 .IP "\fB\-d\fR Delete \s-1XP_PAX\s0 xattr" 4
 .IX Item "-d Delete XP_PAX xattr"
-.IP "\fB\-F\fR Copy \s-1PT_PAX\s0 flags to \s-1XT_PAX\s0, if possible" 4
-.IX Item "-F Copy PT_PAX flags to XT_PAX, if possible"
-.IP "\fB\-f\fR Copy \s-1XT_PAX\s0 flags to \s-1PT_PAX\s0, if possible" 4
-.IX Item "-f Copy XT_PAX flags to PT_PAX, if possible"
+.IP "\fB\-F\fR Copy \s-1PT_PAX\s0 flags to \s-1XATTR_PAX\s0, if possible" 4
+.IX Item "-F Copy PT_PAX flags to XATTR_PAX, if possible"
+.IP "\fB\-f\fR Copy \s-1XATTR_PAX\s0 flags to \s-1PT_PAX\s0, if possible" 4
+.IX Item "-f Copy XATTR_PAX flags to PT_PAX, if possible"
 .IP "\fB\-L\fR Only set \s-1PT_APX\s0 flags, if both are possible" 4
 .IX Item "-L Only set PT_APX flags, if both are possible"
-.IP "\fB\-l\fR Only set \s-1XT_PAX\s0 flags, if both are possible" 4
-.IX Item "-l Only set XT_PAX flags, if both are possible"
+.IP "\fB\-l\fR Only set \s-1XATTR_PAX\s0 flags, if both are possible" 4
+.IX Item "-l Only set XATTR_PAX flags, if both are possible"
 .IP "\fB\-v\fR View the flags" 4
 .IX Item "-v View the flags"
 .IP "\fB\-h\fR Print out a short help message and exit." 4
